--- a/templates/base.html
+++ b/templates/base.html
@@ -1,15 +1,40 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Моя HTML Страница</title>
+    <link rel="stylesheet" href="{% static 'styles/base.css' %}">
+    <link rel="stylesheet" href="{% static 'styles/home.css' %}">
+    <title>Menu</title>	
 </head>
 <body>
-    <h1>Привет, мир!</h1>
-    <p>Это моя первая HTML страница</p>
+    <header class ="header">
+        <div class ="menu">
+            <nav class ="nav-menu">
+                <ul class ="nav-menu__list">
+                    <li><a href="#">Каталог</a></li>
+                    <li><a href="#">Библиотека</a></li>
+                    <li><a href="#">Профиль</a></li>
+                    <li><a href="#">Корзина</a></li>
+                    <li><a href="#">О компании</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+
+    <main>
+        {% block content %}
+        {% endblock %}
+    </main>
+
     <footer>
-        <p>Это футер на моей странице</p>
+        <p>&copy; 2024 YourCompanyName. All rights reserved.</p>
+        <ul>
+            <li><a href="https://vk.com"><img src="vk_logo.png" alt="VK"></a></li>
+            <li><a href="https://www.facebook.com"><img src="facebook_logo.png" alt="Facebook"></a></li>
+            <li><a href="https://www.youtube.com"><img src="youtube_logo.png" alt="YouTube"></a></li>
+        </ul>
     </footer>
 </body>
 </html>
